SIGSEGV in maybe_add_app_id()
The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/gnome-control-center/+bug/1763229
Backtrace from 3.26.1 but the issue is still being reported on 3.28.1
#0 maybe_add_app_id (canonical_app_id=0x40000002 <error: Cannot access memory at address 0x40000002>, panel=0x5593e1ad0e10) at cc-notifications-panel.c:368
app = <optimized out>
full_app_id = <optimized out>
app_info = <optimized out>
path = <optimized out>
settings = <optimized out>
#1 children_changed (settings=<optimized out>, key=<optimized out>, panel=0x5593e1ad0e10) at cc-notifications-panel.c:548
i = <optimized out>
new_app_ids = 0x5593e1d0a560
#2 0x00007f89bc33af9d in g_closure_invoke (closure=0x5593e1d0a560, return_value=0x0, n_param_values=2, param_values=0x7ffcf3402630, invocation_hint=0x7ffcf34025b0) at ../../../../gobject/gclosure.c:804
marshal = 0x7f89bc33da50 <g_cclosure_marshal_VOID__STRING>
marshal_data = 0x0
in_marshal = 0
real_closure = 0x5593e1d0a540
__func__ = "g_closure_invoke"
#3 0x00007f89bc34dcde in signal_emit_unlocked_R (node=node@entry=0x5593e15ab3f0, detail=detail@entry=4534, instance=instance@entry=0x5593e1c75b50, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7ffcf3402630) at ../../../../gobject/gsignal.c:3635
tmp = <optimized out>
handler = 0x5593e1cbf900
accumulator = 0x0
emission = {next = 0x7ffcf3402cf0, instance = 0x5593e1c75b50, ihint = {signal_id = 21, detail = 4534, run_type = G_SIGNAL_RUN_FIRST}, state = EMISSION_RUN, chain_type = 4}
handler_list = 0x5593e1cbf900
return_accu = 0x0
accu = {g_type = 0, data = {{v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}, {v_int = 0, v_uint = 0, v_long = 0, v_ulong = 0, v_int64 = 0, v_uint64 = 0, v_float = 0, v_double = 0, v_pointer = 0x0}}}
signal_id = 21
max_sequential_handler_number = 20318
return_value_altered = 0
#4 0x00007f89bc3564b5 in g_signal_emit_valist (instance=0x5593e1c75b50, signal_id=<optimized out>, detail=4534, var_args=var_args@entry=0x7ffcf3402800) at ../../../../gobject/gsignal.c:3391
instance_and_params = 0x7ffcf3402630
signal_return_type = 4
param_values = 0x7ffcf3402648
i = <optimized out>
n_params = 1
__func__ = "g_signal_emit_valist"
#5 0x00007f89bc356ecf in g_signal_emit (instance=instance@entry=0x5593e1c75b50, signal_id=<optimized out>, detail=<optimized out>) at ../../../../gobject/gsignal.c:3447
var_args = {{gp_offset = 32, fp_offset = 48, overflow_arg_area = 0x7ffcf34028e0, reg_save_area = 0x7ffcf3402820}}
#6 0x00007f89bc68c942 in g_settings_real_change_event (settings=0x5593e1c75b50, keys=0x7ffcf3402ee4, n_keys=<optimized out>) at ../../../../gio/gsettings.c:386
key = 0x5593e1ce1920 "application-children"
i = 0
#7 0x00007f89aae30e18 in ffi_call_unix64 () at ../src/x86/unix64.S:76
No locals.
#8 0x00007f89aae3087a in ffi_call (cif=cif@entry=0x7ffcf3402b50, fn=fn@entry=0x7f89bc68c8e0 <g_settings_real_change_event>, rvalue=<optimized out>, avalue=avalue@entry=0x7ffcf3402a40) at ../src/x86/ffi64.c:525
classes = {X86_64_INTEGER_CLASS, X86_64_NO_CLASS, 4081068880, 32764}
stack = <optimized out>
argp = 0x7ffcf3402920 "\n"
arg_types = <optimized out>
gprcount = 4
ssecount = <optimized out>
ngpr = 1
nsse = 0
i = <optimized out>
avn = <optimized out>
ret_in_memory = <optimized out>
reg_args = <optimized out>
#9 0x00007f89bc33bb8d in g_cclosure_marshal_generic_va (closure=0x5593e15ab540, return_value=0x7ffcf3402d20, instance=<optimized out>, args_list=<optimized out>, marshal_data=<optimized out>, n_params=2, param_types=0x5593e156bd80) at ../../../../gobject/gclosure.c:1604
rtype = 0x7f89aae31140 <ffi_type_sint32>
rvalue = 0x7ffcf3402aa0
n_args = 4
atypes = 0x7ffcf3402a70
args = 0x7ffcf3402a40
storage = 0x7ffcf3402a20
i = <optimized out>
cif = {abi = FFI_UNIX64, nargs = 4, arg_types = 0x7ffcf3402a70, rtype = 0x7f89aae31140 <ffi_type_sint32>, bytes = 0, flags = 10}
cc = 0x5593e15ab540
enum_tmpval = <optimized out>
tmpval_used = 0
args_copy = {{gp_offset = 40, fp_offset = 48, overflow_arg_area = 0x7ffcf3402ed0, reg_save_area = 0x7ffcf3402e10}}