notifications: Disconnect signal handler when panel is destroyed

The handler could remain if other objects continue to hold a reference to the
GSettings object.

https://gitlab.gnome.org/GNOME/gnome-control-center/issues/75